# tourismpay

./: .dockerignore  .env  .env.example  .env.production.example  .env.test  .gitignore  .pre-commit-config.yaml  ARCHITECTURAL-IMPACT-REPORT.md  ARCHITECTURE.md  AUDIT-REPORT-FINAL.md  AUDIT-REPORT-V2.md  AUDIT-REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEMO-PLAN.md  DEPLOYMENT.md  DEVOPS_DEPLOYMENT_GUIDE.md  DEVOPS_OPENSTACK_DEPLOYMENT_GUIDE.md  DRIZZLE-AND-MONITORING-REPORT.md  DRIZZLE-ORM-IMPROVEMENTS-REPORT.md  Dockerfile  Dockerfile.temporal-worker  IMPLEMENTATION-REPORT.md  MANUS-DEPENDENCY-REMOVAL-REPORT.md  MIDDLEWARE-INTEGRATION-REPORT.md  ML-STACK-REPORT.md  Makefile  Makefile.production  NIGERIA-ROLLOUT-PLAN.md  PLATFORM_PRESENTATION.html  PLATFORM_PRESENTATION.md  PRODUCTION-READINESS-CERTIFICATION.md  PRODUCTION-READINESS-FINAL-REPORT.md  PRODUCTION-READINESS.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS.md  README.md  RUNBOOK.md  SCENARIO-VALIDATION.md  SECURITY_AUDIT_REPORT.md  (+27 more)
ab-testing-framework/: go.mod  main.go
agent-commission-management/: go.mod  main.go
agent-mobile-app/: go.mod  main.go
agent-network-platform/: go.mod  main.go
agentic-underwriting/: go.mod  main.go
ai-chatbot/: package.json
ai-ml-integration/: README.md
ai-ml-platform/: PRODUCTION_READINESS.md
aml-screening-python-sdk/: go.mod  requirements.txt
analytics-service/: analytics-service.spec  main.py
android-native/: AdditionalOptimizations.kt  AdditionalSecurityFeatures.kt  AllAdvancedFeatures.kt  CertificatePinning.kt  ComprehensiveAnalytics.kt  DeviceBinding.kt  ImageOptimization.kt  MultiFactorAuthentication.kt  RootDetection.kt  RuntimeProtection.kt  SecureKeyStore.kt  StartupOptimizer.kt  TransactionSigning.kt  VirtualScrolling.kt  VoiceAssistant.kt  build.gradle.kts  gradle.properties  settings.gradle.kts
api-marketplace/: go.mod  main.go
audit-trail-system/: go.mod  main.go
bancassurance-integration/: Dockerfile  go.mod  main.go
batch-processing-engine/: go.mod  main.go
blockchain-transparency/: go.mod  main.go
broker-api-service/: go.mod  main.go
business-requirements-implementations/: README.md
caddy/: Caddyfile  Dockerfile  caddy.json
ci-templates/: dependabot.yml.template
claims-adjudication-engine/: go.mod  main.go
client/: index.html
communication-service/: Dockerfile  go.mod  main.go
config/: regulatory-config.json
config_file/: 0_TXg35RgNUZ22tK8iNKFHzx_1769701989538_na1fn_L2hvbWUvdWJ1bnR1L2ludGVncmF0aW9uL2NvbmZpZw.py  11_wgk7Tsi9Op2e7rkkrfIo99_1769701879000_na1fn_L2hvbWUvdWJ1bnR1L3RlbXBvcmFsX2xha2Vob3VzZV9pbnRlZ3JhdGlvbi9jb25maWc.yaml  12_FdUgXmLa2SSWqs93LWSJ5C_1769701918044_na1fn_L2hvbWUvdWJ1bnR1L2tleWNsb2FrX3Blcm1pZnlfc3luYy9jb25maWc.yaml  13_3waLnusAd0P85opSCMW80Z_1769701898395_na1fn_L2hvbWUvdWJ1bnR1L2FwaXNpeF9rZXljbG9ha19jb25maWc.yaml  14_fHr9Hq1ngStP8rQhlpPakg_1769701924090_na1fn_L2hvbWUvdWJ1bnR1L2RhcHJfdGVtcG9yYWxfaW50ZWdyYXRpb24vaW50ZWdyYXRpb25fY29uZmln.json  15_1YQkn6NSScMhtkZAaaYFil_1769701866929_na1fn_L2hvbWUvdWJ1bnR1L2ZsdXZpb19sYWtlaG91c2VfaW50ZWdyYXRpb24vY29uZmln.yaml  16_9D66EJFRtFwSXMjrIhG7Xi_1769701947750_na1fn_L2hvbWUvdWJ1bnR1L2NvbmZpZw.json  17_KKQfzK4cdEGa95aQPFOiQ8_1769701893943_na1fn_L2hvbWUvdWJ1bnR1L2NvbmZpZw.yaml  1_FMEah2KPtSIPNMVwo35Uf5_1769701878949_na1fn_L2hvbWUvdWJ1bnR1L2ludGVncmF0aW9uL2NvbmZpZw.yaml  2_rjvgrkRld1r1DTRmXgsCM8_1769701887521_na1fn_L2hvbWUvdWJ1bnR1L2NvbmZpZw.ini  3_5b0Q4b2LqS2ayPtt8Pc4T4_1769701886913_na1fn_L2hvbWUvdWJ1bnR1L3BnX3RlbXBvcmFsX2ludGVncmF0aW9uL2NvbmZpZw.env  4_6zDQujzxpwfblwalcuECwT_1769701900037_na1fn_L2hvbWUvdWJ1bnR1L2NvbmZpZw.ini  5_KzMdOSyuv6LhvJNBxsW9gz_1769701878641_na1fn_L2hvbWUvdWJ1bnR1L3RpZ2VyYmVldGxlX2xha2Vob3VzZV9pbnRlZ3JhdGlvbi9jb25maWc.yaml  6_ER22afo4hRKDgZVyIqwnpQ_1769701874950_na1fn_L2hvbWUvdWJ1bnR1L2NvbmZpZw.ini  (+3 more)
contracts/: hardhat.config.ts
customer-360-view/: go.mod  (+1 more)
fluvio-producer/: Cargo.toml  Dockerfile
fluvio-producer/src/: main.rs
gds-standalone/sdk/python/: README.md  gds_client.py  pyproject.toml
gds-standalone/services/commission-engine/: Cargo.toml
gds-standalone/services/commission-engine/src/: main.rs
gds-standalone/services/queue-system/: Cargo.toml
gds-standalone/services/queue-system/src/: main.rs
infra/fluvio/smartmodules/fraud-enricher/: Cargo.toml
infra/fluvio/smartmodules/fraud-enricher/src/: lib.rs
infra/fluvio/smartmodules/mdm-heartbeat-parser/: Cargo.toml
infra/fluvio/smartmodules/mdm-heartbeat-parser/src/: lib.rs
infra/fluvio/smartmodules/transaction-filter/: Cargo.toml
infra/fluvio/smartmodules/transaction-filter/src/: lib.rs
middleware/rust/connection-pool/: Cargo.toml
middleware/rust/connection-pool/src/: main.rs
middleware/rust/rate-limiter/: Cargo.toml
middleware/rust/rate-limiter/src/: main.rs
offline-queue/: Cargo.toml
offline-queue/src/: main.rs
rust-kyc-service/: Cargo.toml  Dockerfile
rust-kyc-service/src/: agent_kyc.rs  ai_engine.rs  auth.rs  biometric_pay.rs  db.rs  fund_flow_atomicity.rs  gds_registry.rs  handlers.rs  lifecycle.rs  main.rs  models.rs  nfc_payment.rs  permify.rs  pricing_engine.rs  tax_remittance.rs  tax_tip_engine.rs  travel_readiness.rs  verification.rs
rust-middleware-bridge/: Cargo.toml  Dockerfile
rust-middleware-bridge/src/: main.rs
rust-services/crypto-engine/: Cargo.toml  Dockerfile
rust-services/crypto-engine/src/: main.rs
rust-services/offline-sync/: Cargo.toml  Dockerfile
rust-services/offline-sync/src/: main.rs
rust-services/pbac-engine/: Cargo.toml  Dockerfile
rust-services/pbac-engine/src/: evaluator.rs  main.rs  policy.rs
rust-services/rate-limiter/: Cargo.toml  Dockerfile
rust-services/rate-limiter/src/: main.rs
rust-services/redis-cache/: Cargo.toml  Dockerfile
rust-services/redis-cache/src/: main.rs
server/ecommerce-cart-rust/: Cargo.toml  Dockerfile
server/ecommerce-cart-rust/src/: cart.rs  checkout.rs  main.rs  models.rs  offline.rs
services/crypto-engine/: Cargo.toml  Dockerfile
services/crypto-engine/src/: main.rs  tests.rs
services/fluvio-consumer/: Cargo.toml  Dockerfile
services/fluvio-consumer/src/: main.rs
(+4986 files in other folders)
