[package]
name = "fluvio-producer"
version = "1.0.0"
edition = "2021"
description = "High-throughput event producer sidecar for commission, settlement, and dispute event streaming via Fluvio"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
strip = true
