[package]
name = "offline_queue"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "offline-queue"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP server
axum = "0.7"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SQLite (bundled — no system lib required)
rusqlite = { version = "0.31", features = ["bundled"] }
# UUID generation
uuid = { version = "1", features = ["v4"] }
# Timestamp
chrono = { version = "0.4", features = ["serde"] }
# Tower middleware for axum
tower-http = { version = "0.5", features = ["cors"] }
