[package]
name = "tourismpay-kyc-service"
version = "1.0.0"
edition = "2021"
description = "TourismPay KYC/Liveness Verification Service"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
ring = "0.17"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"

[dev-dependencies]
actix-rt = "2"
