[package]
name = "pos-middleware-bridge"
version = "1.0.0"
edition = "2021"
description = "High-performance middleware bridge for 54Link POS Shell — Kafka, Redis, event bus"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
