[package]
name = "crypto-engine"
version = "1.0.0"
edition = "2021"
description = "Cryptographic operations engine for TourismPay - key management, signing, encryption"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
dashmap = "6"
