[package]
name = "offline-sync"
version = "1.0.0"
edition = "2021"
description = "Offline-first sync engine for unreliable/low-bandwidth environments"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
sha2 = "0.10"
hex = "0.4"
