[package]
name = "pbac-engine"
version = "1.0.0"
edition = "2021"
description = "Policy-Based Access Control engine for TourismPay"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9"
regex = "1"
dashmap = "6"
