[package]
name = "rate-limiter"
version = "1.0.0"
edition = "2021"
description = "High-performance distributed rate limiter with sliding window for TourismPay"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6"
