[package]
name = "ecommerce-cart"
version = "1.0.0"
edition = "2021"
description = "High-performance shopping cart and checkout engine for POS-54Link"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
