[package]
name = "crypto-engine"
version = "0.1.0"
edition = "2021"
description = "TourismPay cryptographic operations engine"

[[bin]]
name = "crypto-engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
