[package]
name = "fluvio-consumer"
version = "0.1.0"
edition = "2021"
description = "TourismPay Fluvio event stream consumer"

[[bin]]
name = "fluvio-consumer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
# Production: uncomment when Fluvio cluster is available
# fluvio = "0.22"
# fluvio-future = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
