[project]
name = "africa-gds-sdk"
version = "1.0.0"
description = "Python SDK for the Africa-first Global Distribution System"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "TourismPay", email = "dev@tourismpay.com" }]
keywords = ["gds", "tourism", "africa", "booking", "travel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.25.0"]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
