[package]
name = "gds-queue-system"
version = "1.0.0"
edition = "2021"
description = "High-throughput agent work queue system for Africa-first GDS"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
