[package]
name = "pos54-connection-pool"
version = "1.0.0"
edition = "2021"
description = "Multi-backend connection pool manager for POS-54Link middleware"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
