[package]
name = "pos54-rate-limiter"
version = "1.0.0"
edition = "2021"
description = "High-performance sliding window rate limiter for POS-54Link"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
