[package]
name = "fraud-enricher"
version = "1.0.0"
edition = "2021"
description = "54Link Fluvio SmartModule: enriches fraud alert events with agent metadata and risk score"

[lib]
name = "fraud_enricher"
crate-type = ["cdylib"]

[dependencies]
fluvio-smartmodule = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
