[package]
name = "mdm-heartbeat-parser"
version = "1.0.0"
edition = "2021"
description = "54Link Fluvio SmartModule: validates and normalises MDM heartbeat payloads"

[lib]
name = "mdm_heartbeat_parser"
crate-type = ["cdylib"]

[dependencies]
fluvio-smartmodule = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
