[package]
name = "transaction-filter"
version = "1.0.0"
edition = "2021"
description = "54Link Fluvio SmartModule: filters transactions by amount threshold and status"

[lib]
name = "transaction_filter"
crate-type = ["cdylib"]

[dependencies]
fluvio-smartmodule = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
